force-app/main/default/objects/Room__c/Room__c.object-meta.xml
<CustomObject>
    <label>Room</label>
    <nameField>
        <displayFormat>S{000}</displayFormat>
        <label>Room Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>