force-app/main/default/objects/Room__c/fields/Beds_Amount__c.field-meta.xml
<CustomField>
    <fullName>Beds_Amount__c</fullName>
    <label>Beds Amount</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>