force-app/main/default/objects/Room__c/fields/Beds_Taken__c.field-meta.xml
<CustomField>
    <fullName>Beds_Taken__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Beds Taken</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>