force-app/main/default/objects/Room__c/fields/Free_Beds__c.field-meta.xml
<CustomField>
    <fullName>Free_Beds__c</fullName>
    <formula>Beds_Amount__c -  Beds_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free Beds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>