force-app/main/default/objects/Room__c/recordTypes/Operating_Theater.recordType-meta.xml
<RecordType>
    <fullName>Operating_Theater</fullName>
    <active>true</active>
    <label>Operating Theater</label>
</RecordType>