force-app/main/default/objects/Room__c/recordTypes/Ward_Room.recordType-meta.xml
<RecordType>
    <fullName>Ward_Room</fullName>
    <active>true</active>
    <label>Ward Room</label>
</RecordType>