force-app/main/default/objects/Room__c/validationRules/Single.validationRule-meta.xml
<ValidationRule>
    <fullName>Single</fullName>
    <active>true</active>
    <description>Single room has to have only one bed</description>
    <errorConditionFormula>(ISPICKVAL(Type__c, &quot;Single room&quot;) &amp;&amp; Beds_Amount__c != 1) || (ISPICKVAL(Type__c, &quot;Multibed room&quot;) &amp;&amp; Beds_Amount__c != 5)</errorConditionFormula>
    <errorDisplayField>Beds_Amount__c</errorDisplayField>
    <errorMessage>Single room has to have only 1 bed and Multibed room has to have exactly 5 beds</errorMessage>
</ValidationRule>